// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::reset password required should redirect to /auth-code when valid password entered 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
}
`;

exports[`Integration::reset password required should return error when csrf not present 1`] = `
Object {
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
}
`;

exports[`Integration::reset password required should return error when new password is the same as existing password 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return reset password page 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when no numbers present in password 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when password all numeric 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when password is amongst most common passwords 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when password less than 8 characters 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when password not entered 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;

exports[`Integration::reset password required should return validation error when passwords don't match 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
}
`;
